--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@cloudinary/url-gen": "^1.9.0",
     "@rajesh896/video-thumbnails-generator": "^2.3.9",
     "axios": "^1.3.3",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.2",
