--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-player": "^2.11.2",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
