--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.11.2",
     "react-responsive-masonry": "^2.1.7",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "swr": "^2.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
