--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cloudinary/url-gen": "^1.9.0",
     "@emotion/react": "^11.10.6",
+    "@hookform/resolvers": "^2.9.11",
     "@mantine/core": "^5.10.4",
     "@mantine/hooks": "^5.10.4",
     "@rajesh896/video-thumbnails-generator": "^2.3.9",
@@ -19,12 +20,13 @@
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.4",
     "react-icons": "^4.7.1",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.11.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.8.1",
-    "swr": "^2.0.4"
+    "swr": "^2.0.4",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
