--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-player": "^2.11.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.1",
     "swr": "^2.0.4",
     "yup": "^1.0.2"
   },
