--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
     "swr": "^2.0.4",
+    "video-react": "^0.16.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
